# RRT3D

./: CMakeLists.txt  Readme.md
src/: draw.cpp  draw.hpp  example_kerr.cpp  example_kerr_dust.cpp  example_schwarzschild.cpp  metric.hpp  metric_KS_Schwarzschild.cpp  metric_KS_Schwarzschild.hpp  metric_Kerr_BL.cpp  metric_Kerr_BL.hpp  metric_Kerr_Schild.cpp  metric_Kerr_Schild.hpp  particle.cpp  particle.hpp  physics.cpp  physics.hpp  postprocess.cpp  postprocess.hpp  raytracing.cpp  raytracing.hpp
